--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ header{
 }
 main{
     grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .sectionPresentacion{
     grid-area: section;
